# Hexpod

./: .gitignore  README.md
continuousControl/: CMakeLists.txt  continuousControl.cpp  hexapod.cpp  hexapod.h
continuousControl/arduinoCode/continuousControl/: continuousControl.ino
continuousControl/arduinoCode/testing/: testing.ino
controllerTesting/: CMakeLists.txt  hexapod.cpp  hexapod.h  read_controller.cpp
modules/arduino/servoCalibration/: servoCalibration.ino
modules/custom/arduinoConnection/: arduinoController.cpp  arduinoController.h
modules/custom/getController/: getController.cpp
modules/custom/raisimSimulator/: raisimSimulator.cpp  raisimSimulator.h
modules/custom/raisimSimulatorFull/: raisimSimulator.cpp  raisimSimulator.h
modules/custom/raisimSimulatorLeg/: raisimSimulator.h
modules/custom/rsTimedLoop/: rsTimedLoop.cpp  rsTimedLoop.h
modules/models/hexapod/urdf/: hexapod.urdf  hexapodCustom.urdf  hexapodCustomLong.urdf  hexapodLeg.urdf  hexapodV2Control.urdf  hexapodV2a.urdf  hexapodV2b.urdf
multiLegControl/: CMakeLists.txt  hexapod.cpp  hexapod.h  multiLegControl.cpp  singleLegControl.cpp
multiLegControl/arduinoCode/multiLegArduino/: multiLegArduino.ino
multiLegControl/arduinoCode/singleLegArduino/: singleLegArduino.ino
readArduino/: CMakeLists.txt  readArduino.cpp
singleLegControl/: CMakeLists.txt  arduinoConnection.cpp  arduinoController.cpp  arduinoController.h  hexapodLeg.cpp  hexapodLeg.h  readArduino.cpp  rs_timed_loop.cpp  rs_timed_loop.h  singleLegControl.cpp
